# islamic-books-mcp

./: Procfile  convert_shopify_export.py  enrich_catalog.py  learning_paths.json  main.py  previews.json  products.csv  pyproject.toml  server.py  smithery.yaml  surah_mapping.json  trending.json
