[project]
name = "ami-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-generativeai>=0.8.6",
    "mcp>=1.27.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.3.4",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
]
